# JazzJackRabbit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Vagrantfile  \  configs.yaml  games_config.yaml  how_to_suppress.md  provisioning_vagrant.sh
.Trash-1000/info/: ammo_0.png.trashinfo  ammo_1.png.trashinfo  ammo_2.png.trashinfo  ammo_3.png.trashinfo  ammo_4.png.trashinfo  ammo_5.png.trashinfo  ammo_6.png.trashinfo  ammo_7.png.trashinfo
.github/workflows/: .pre-commit-config.yaml  pre-commit.yaml
docs/: Manual_de_usuario.md
extlib/libSDL2pp/tests/: testing.h
scripts/: build.sh  build_for_vagrant.sh  provisioning_finish_vagrant.sh  provisioning_start_vagrant.sh  run_client.sh  run_server.sh  setup_libs.sh
scripts/files/: sdl2_image-config.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
skt/: socket.cpp  socket.h
src/client/: StopIteration.h  client.cpp  client.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  coordinates.h  disconnection_exception.cpp  disconnection_exception.h  game_configs.cpp  game_configs.h  keyboard_handler.cpp  keyboard_handler.h  lobby.cpp  lobby.h  lobby_protocol.cpp  lobby_protocol.h  lobby_receiver.cpp  lobby_receiver.h  lobby_sender.cpp  lobby_sender.h  player.cpp  player.h  renderable.h  renderer.cpp  renderer.h
src/client/debug/: debug_panel.cpp  debug_panel.h
src/client/graphics/: animation_state.cpp  animation_state.h  graphic_engine.cpp  graphic_engine.h  jazz.h  playable_character.h  sprite.cpp  sprite.h  sprite_props.cpp  sprite_props.h  text.cpp  text.h  texture_loader.cpp  texture_loader.h
src/client/graphics/bullets/: bullet_gun_1.cpp  bullet_gun_1.h  bullet_gun_2.cpp  bullet_gun_2.h
src/client/graphics/collectables/: ammo_gun_1.cpp  ammo_gun_1.h  ammo_gun_2.cpp  ammo_gun_2.h  carrot.cpp  carrot.h  coin.cpp  coin.h  diamond.cpp  diamond.h
src/client/graphics/disconnected_overlay/: disconnected_overlay.cpp  disconnected_overlay.h
src/client/graphics/enemies/: bubba.cpp  bubba.h  schwarzenguard.cpp  schwarzenguard.h  turtle_goon.cpp  turtle_goon.h
src/client/graphics/hud/: hud.cpp  hud.h
src/client/graphics/jazz/: jazz.cpp  jazz.h
src/client/graphics/jazz/states/: jazz_idle.cpp  jazz_idle.h
src/client/graphics/leaderboard/: leaderboard.cpp  leaderboard.h
src/client/graphics/lori/: lori.cpp  lori.h
src/client/graphics/map/: map.cpp  map.h  map_coordinates.yaml  random_source.yaml
src/client/graphics/spaz/: spaz.cpp  spaz.h
src/client/sound/: audio_engine.cpp  audio_engine.h  audio_loader.cpp  audio_loader.h  music.cpp  music.h  sound_effect.cpp  sound_effect.h
src/client/sprites/beach_world_scenario/background/: metadata.yaml
src/client/sprites/bubba/death/: metadata.json  metadata.yaml
src/client/sprites/bubba/hurt/: metadata.json  metadata.yaml
src/client/sprites/bubba/idle/: metadata.json  metadata.yaml
src/client/sprites/bubba/shooting/: metadata.json  metadata.yaml
src/client/sprites/carrotus_scenario/full_dirt/: metadata.yaml
src/client/sprites/carrotus_scenario/slope/: metadata.yaml
src/client/sprites/collectables/carrot/: metadata.json  metadata.yaml
src/client/sprites/collectables/coin/: metadata.json  metadata.yaml
src/client/sprites/collectables/diamond/: metadata.json  metadata.yaml
src/client/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  startup_screen.cpp  startup_screen.h
src/common/: closed_queue.cpp  closed_queue.h  common_message.h  common_message_constructor.cpp  common_message_constructor.h  common_wrap_socket.cpp  coordinates.cpp  game_info.h  global_configs.cpp  global_configs.h  hitbox.cpp  hitbox.h  jazz_jackrabbit_2_error.cpp  jazz_jackrabbit_2_error.h  jjr2_error.cpp  jjr2_error.h  liberror.cpp  liberror.h  logger.cpp  logger.h  player_commands.h  player_status_DTO.cpp  player_status_DTO.h  queue.h  random_string_generator.cpp  random_string_generator.h  rectangle.cpp  rectangle.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  runnable.h  slope.cpp  slope.h  snapshot_DTO.cpp  snapshot_DTO.h  snapshot_wrapper.cpp  snapshot_wrapper.h  socket.cpp  (+3 more)
src/data/: base_dto.cpp  base_dto.h  command_code_dto.h  communication_dto.h  convention.h  convention.md  hitbox_sizes.h  player_info_dt.h  player_info_dto.h  snapshot_dto.h
src/engine/: base_player.cpp  base_player.h  game.h  global_counter.cpp  global_counter.h  jazz.cpp  jazz.h  lori.cpp  lori.h  server_map.cpp  server_map.h  spaz.cpp  spaz.h
src/engine/bullets/: bullet.cpp  bullet.h
src/engine/collectables/: ammo.cpp  ammo.h  base_collectable.cpp  base_collectable.h  carrot.cpp  carrot.h  coin.cpp  coin.h  collectables_handler.cpp  collectables_handler.h  gem.cpp  gem.h  poisoned.cpp  poisoned.h
src/engine/enemies/: base_enemy.cpp  base_enemy.h  bubba.cpp  bubba.h  enemies_handler.cpp  enemies_handler.h  schwarzenguard.cpp  schwarzenguard.h  turtle_goon.cpp  turtle_goon.h
src/engine/states/: alive.cpp  alive.h  base_state.cpp  base_state.h  dead.cpp  dead.h  intoxicated.cpp  intoxicated.h
src/engine/weapons/: base_weapon.cpp  base_weapon.h  initial_weapon.cpp  initial_weapon.h  orb.cpp  orb.h
src/server/: server.cpp  server.h  server_acceptator.cpp  server_acceptator.h  server_accepter.cpp  server_accepter.h  server_client_handler.cpp  server_client_handler.h  server_client_registrator.cpp  server_client_registrator.h  server_game.cpp  server_game.h  server_game_info_dto.h  server_game_monitor.cpp  server_game_monitor.h  server_game_wrapper.cpp  server_game_wrapper.h  server_games_monitor.cpp  server_games_monitor.h  server_main.cpp  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_serializer.cpp  server_serializer.h
test/: CMakeLists.txt  Documentacion Test.md  JazzJackRabbit2Test.cpp  baseSocket.h  socketMock.cpp  socketMock.h  testProtocoloCliente.cpp  testProtocoloServidor.cpp
valgrind/: memcheck.supp  qt.supp  sdl.supp
(+195 files in other folders)
